--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,11 +8,10 @@ galaxy_info:
   min_ansible_version: 2.8
 
   platforms:
+  - name: Debian
+    versions: all
   - name: Ubuntu
-    versions:
-    - 14.04
-    - 16.04
-    - 18.04
+    versions: all
 
   galaxy_tags:
       - minecraft
@@ -27,4 +26,3 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-  
