--- a/tasks/DeployOnUbuntu.yml
+++ b/tasks/DeployOnUbuntu.yml
@@ -86,17 +86,21 @@
     path: /tmp/minecraft_backup
     state: directory # create a directory
 
-- name: Compress minecraft files
-  archive:
-      path: ~/minecraft/  # contains minecraft files
-      dest: /tmp/minecraft_backup/minecraft_backup_{{ ansible_date_time.date }}.tar.gz # create a tar (one file) gz (compressed) with the date
-      remove: no # IMPORTANT! Always set to NO!!! Otherwise, the original data will be destroyed!!
-
 ## Minecraft will not run in screen on the first launch, but be run natively
 - name: Check that minecraft has been run atleast once
   stat:
-    path: ~/minecraft/server.properties
+      path: ~/minecraft/server.properties
   register: stat_result
+
+- name: Backup mc server if this is not the first run
+  when: stat_result.stat.exists == True
+  block:
+
+      - name: Compress minecraft files
+        archive:
+            path: ~/minecraft/  # contains minecraft files
+            dest: /tmp/minecraft_backup/minecraft_backup_{{ ansible_date_time.date }}.tar.gz # create a tar (one file) gz (compressed) with the date
+            remove: no # IMPORTANT! Always set to NO!!! Otherwise, the original data will be destroyed!!
 
 - name: Start minecraft (not in screen) the first time
   when: stat_result.stat.exists == False
@@ -109,11 +113,11 @@
 
       ## Start thet server for the first time
       - name: Start minecraft for the first time
-        command: "screen -S minecraft -d -m ~/minecraft/run.sh"
+        command: "chdir=~/minecraft/ screen -S minecraft -d -m ~/minecraft/run.sh"
 
       ## Pause for 2 minutes so the game can launch for the first time
-      - name: Pause for 1 minute
-        pause: minutes=1
+      - name: Pause for 30 seconds
+        pause: seconds=30
 
       - name: replace busted eula.txt
         replace:
@@ -123,18 +127,28 @@
 
       ## Start thet server for the first time
       - name: Start minecraft for the first time
-        shell: "java -Xmx1024M -Xms1024M -jar ~/minecraft/minecraft_server.jar nogui"
+        command: "chdir=~/minecraft/ screen -S minecraft -d -m ~/minecraft/run.sh"
+
+      - name: Pause for 80 seconds for mc server to fully boot
+        pause: seconds=80
+
+            #      ## Start thet server for the first time
+      #      - name: Start minecraft for the first time
+        #        shell: "java -Xmx1024M -Xms1024M -jar ~/minecraft/minecraft_server.jar nogui"
 
       - name: stop the server
-        shell: "/stop \n"
+        command: "chdir=~/minecraft/ screen -S minecraft -d -m /stop \n"
+
+      - name: Pause for 20 seconds for mc server to fully stop
+        pause: seconds=20
 
 ## Ensure the world is running
 - name: "Start the minecraft {{ mc_version }} server if needed"
-  shell: "screen -S minecraft -d -m java -Xmx1024M -Xms1024M -jar ~/minecraft/minecraft_server.jar nogui"
+  command: "chdir=~/minecraft/ screen -S minecraft -d -m ~/minecraft/run.sh"
 
 ## allow the server 2 minutes to boot
-- name: pause for mc server boot
-  pause: minutes=2
+- name: pause for 80 seconds for mc server to fully boot
+  pause: seconds=80
 
 ## Let the world know that the world has been saved!
 - name: Signal the Minecraft Sever has been backed up
