--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,5 +5,5 @@
 #   - ubuntu
 
 - name: Deploy on Debian or Ubuntu
-  include_tasks: DeployOnUbuntu.yml
+  include_tasks: deployonubuntu.yml
   when: ansible_os_family == "Debian"
