--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,7 +21,8 @@ galaxy_info:
       - fun
       - home
       - helpful
-      - Ubuntu
+      - ubuntu
+      - debian
 
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
