--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Russell Zachary Feeser
-  description: Consultant and Trainer
+  description: Install and deploys or backups your vanilla Minecraft server
   company: IRIS7 and Alta3 Research
 
   license: MIT
